# Nepal-Knowledge-Assistant

./: .gitignore  App.py  README.md  main.py  pyproject.toml  requirements.txt  stream.py
data/: Cities.txt  Culture.txt  Economic and industry.txt  Education and healthcare.txt  Famous people and achievement.txt  General.txt  History and Politics.txt  Mountains.txt  Province.txt  Rivers.txt  Sports,Media and Entertainment.txt  Tourism.txt  Transprotation and Infrastructure.txt  Trekking.txt
src/: answer_generation.py  chunking.py  data_loader.py  embedding.py  nepal_assistant.py  online_sources.py  topic_router.py  vectorstore.py
