[project]
name = "nepal-knowledge-assistant1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.7",
    "ddgs>=9.10.0",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.13.1",
    "ipykernel>=7.1.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "langchain-groq>=1.1.1",
    "langchain-huggingface>=1.2.0",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.0",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.52.2",
]
